src/components/home/title.module.css
.column {
  display: flex;
  flex-direction: column;
  padding-top: 48px;
  padding-bottom: 48px;
}

@media screen and (max-width: 768px) {
  .column:nth-of-type(1) {
    padding-bottom: 0;
  }
}

.image_wrapper {
  max-width: 385px;
  position: relative;
  z-index: -2;
}

@media screen and (max-width: 768px) {
  .image_wrapper {
    max-width: unset;
  }
}

.title {
  font-size: 4em;
  font-weight: 800;
  margin-bottom: 32px;
}

@media screen and (max-width: 768px) {
  .title {
    margin-bottom: 48px;
    text-align: center;
  }
}

.description {
  font-size: 1em;
  margin-top: 32px;
}


@media screen and (max-width: 768px) {
  .description {
    margin-top: 48px;
    text-align: center;
  }
}

.links {
  font-size: 2em;
}

.links a {
  display: flex;
  align-items: center;
  position: relative;
}

.links a svg {
  fill: var(--secondary);
}

.links a:not(:last-of-type) {
  margin-right: 30px;
}

.links a:after {
  content: "";
  position: absolute;
  top: -10px;
  left: -10px;
  width: 50px;
  height: 50px;
  z-index: -1;
  border-radius: 100%;
  border: 1px solid #47F10B;
  transform: scale(0);
  transition: transform 0.2s ease;
}

.links a:hover:after {
  transform: scale(1);
}

@media screen and (max-width: 768px) {
  .links {
    justify-content: center;
    font-size: 3em;
  }
}

